--- a/careers.html
+++ b/careers.html
@@ -110,7 +110,7 @@
           <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
               <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
-              <h4 class="title"><a href="" class="stretched-link">Social Listening</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">Sales - Executive</a></h4>
               <p>We provide social listening solutions that analyze online conversations about your brand and industry, helping you gain valuable insights into your audience.</p>
               <a class="cta-btn" href="mailto:info@example.com">Apply Now</a>
 
@@ -120,7 +120,7 @@
           <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
               <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
-              <h4 class="title"><a href="" class="stretched-link">Social Listening</a></h4>
+              <h4 class="title"><a href="" class="stretched-link">Digital Project Cordinator</a></h4>
               <p>We provide social listening solutions that analyze online conversations about your brand and industry, helping you gain valuable insights into your audience.</p>
               <a class="cta-btn" href="mailto:info@example.com">Apply Now</a>
             </div>
@@ -144,7 +144,7 @@
             </div>
           </div>
           <!--End Icon Box -->
-          <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
+          <!-- <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
               <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
               <h4 class="title"><a href="" class="stretched-link">Social Listening</a></h4>
@@ -152,7 +152,7 @@
               <a class="cta-btn" href="mailto:info@example.com">Apply Now</a>
             </div>
           </div>
-          <!--End Icon Box -->
+          End Icon Box -->
         </div>
 
       </div>
