--- a/careers.html
+++ b/careers.html
@@ -111,7 +111,7 @@
             <div class="icon-box">
               <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
               <h4 class="title"><a href="" class="stretched-link">Sales - Executive</a></h4>
-              <p>We provide social listening solutions that analyze online conversations about your brand and industry, helping you gain valuable insights into your audience.</p>
+              <p>Join our team as a Sales Executive! Drive growth by building strong client relationships, identifying opportunities, and delivering exceptional service to help clients reach their business goals.</p>
               <a class="cta-btn" href="mailto:info@example.com">Apply Now</a>
 
             </div>
@@ -121,7 +121,7 @@
             <div class="icon-box">
               <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
               <h4 class="title"><a href="" class="stretched-link">Digital Project Cordinator</a></h4>
-              <p>We provide social listening solutions that analyze online conversations about your brand and industry, helping you gain valuable insights into your audience.</p>
+              <p>Seeking a Digital Project Coordinator! Manage timelines, collaborate with teams, and ensure seamless project execution to drive successful digital marketing campaigns and client satisfaction.</p>
               <a class="cta-btn" href="mailto:info@example.com">Apply Now</a>
             </div>
           </div>
@@ -129,8 +129,8 @@
           <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
               <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
-              <h4 class="title"><a href="" class="stretched-link">Social Listening</a></h4>
-              <p>We provide social listening solutions that analyze online conversations about your brand and industry, helping you gain valuable insights into your audience.</p>
+              <h4 class="title"><a href="" class="stretched-link">Executive - Maintenance</a></h4>
+              <p>Join us as an Executive Maintenance professional! Ensure optimal operation of facilities through regular maintenance, troubleshooting, and implementing solutions for a safe, efficient environment.</p>
               <a class="cta-btn" href="mailto:info@example.com">Apply Now</a>
             </div>
           </div>
@@ -138,8 +138,8 @@
           <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
               <div class="icon"><img src="assets/images/icons/service-social.svg" alt="icon"></div>
-              <h4 class="title"><a href="" class="stretched-link">Social Listening</a></h4>
-              <p>We provide social listening solutions that analyze online conversations about your brand and industry, helping you gain valuable insights into your audience.</p>
+              <h4 class="title"><a href="" class="stretched-link">Executive - Accounts</a></h4>
+              <p>Join us as an Executive Maintenance professional! Ensure optimal operation of facilities through regular maintenance, troubleshooting, and implementing solutions for a safe, efficient environment. </p>
               <a class="cta-btn" href="mailto:info@example.com">Apply Now</a>
             </div>
           </div>
