--- a/job3.html
+++ b/job3.html
@@ -150,8 +150,8 @@
         
                     <section class="apply-now">
                         <h2>Apply Now</h2>
-                        <p>Excited to join us? Click the button below to apply!</p>
-                        <a href="#" class="cta-btn">Apply Now</a>
+                        <p>Excited to join us? Fill the form below and Click the button to apply!</p>
+                        <!-- <a href="#" class="cta-btn">Apply Now</a> -->
                     </section>
                     <br>
                 </div>
@@ -191,9 +191,15 @@
                           <div class="help-block with-errors"></div>
                         </div>
                       </div>
-                      <div class="col-md-12">
+                      <section class="apply-now">
+                        <!-- <h2>Apply Now</h2>
+                        <p>Excited to join us? Click the button below to apply!</p> -->
+                        <a href="#" class="cta-btn">Apply Now</a>
+                    </section>
+                      
+                      <!-- <div class="col-md-12">
                         <button type="submit" data-text="Send Message">Send Message</button>
-                      </div>
+                      </div> -->
                       <div class="messages">
                         <div class="alert alert alert-success alert-dismissable alert-dismissable hidden"
                           id="msgSubmit"><button type="button" class="close" data-dismiss="alert"
