--- a/index.html
+++ b/index.html
@@ -73,8 +73,14 @@
   <!-- End Header -->
 
   <!--  Hero Section  -->
-  <section id="hero" class="hero sticked-header-offset">
+  <div class="slideshow">
+     <section id="hero" class="hero sticked-header-offset">
 
+<br>
+<br>
+<br>
+<br>
+<br>
     <div id="particles-js"></div>
     <div id="repulse-circle-div"></div>
     <div class="container position-relative">
@@ -107,6 +113,9 @@
       </div>
     </div>
   </section>
+  </div>
+
+ 
   <!-- End Hero Section -->
 
   <main id="main">
